Added detail from collection view and trailer viewing

--- a/Flixster/Base.lproj/LaunchScreen.storyboard
+++ b/Flixster/Base.lproj/LaunchScreen.storyboard
@@ -18,12 +18,17 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" fixedFrame="YES" insetsLayoutMarginsFromSafeArea="NO" image="launch_image" translatesAutoresizingMaskIntoConstraints="NO" id="18b-6x-lFh">
-                                <rect key="frame" x="118" y="264" width="138" height="139"/>
-                                <autoresizingMask key="autoresizingMask"/>
+                            <imageView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" image="launch_image" translatesAutoresizingMaskIntoConstraints="NO" id="18b-6x-lFh">
+                                <rect key="frame" x="0.0" y="10" width="375" height="667"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="18b-6x-lFh" firstAttribute="height" secondItem="Ze5-6b-2t3" secondAttribute="height" id="Cdr-2z-Xey"/>
+                            <constraint firstItem="18b-6x-lFh" firstAttribute="width" secondItem="Ze5-6b-2t3" secondAttribute="width" id="dwi-Pc-lRS"/>
+                            <constraint firstItem="18b-6x-lFh" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="fT5-DB-hiO"/>
+                            <constraint firstItem="18b-6x-lFh" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="vVd-TM-71C"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
