--- a/Flixster/Base.lproj/Main.storyboard
+++ b/Flixster/Base.lproj/Main.storyboard
@@ -102,12 +102,16 @@
                                 <rect key="frame" x="0.0" y="7.6666666666666856" width="414" height="736"/>
                                 <color key="backgroundColor" white="0.1028279049" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hpm-Uf-s8C">
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hpm-Uf-s8C">
                                 <rect key="frame" x="124.33333333333333" y="94.000000000000014" width="165.33333333333337" height="248.33333333333337"/>
                                 <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <gestureRecognizers/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="hpm-Uf-s8C" secondAttribute="height" multiplier="2:3" id="067-q4-BkE"/>
                                 </constraints>
+                                <connections>
+                                    <outletCollection property="gestureRecognizers" destination="Ahb-G9-vLA" appends="YES" id="3JJ-G8-0Iz"/>
+                                </connections>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="TopLeft" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eSL-KT-utN">
                                 <rect key="frame" x="25" y="350.33333333333331" width="364" height="36.333333333333314"/>
@@ -174,11 +178,66 @@
                         <outlet property="ratingProgressView" destination="Dz9-54-ECU" id="v1E-8Q-uk4"/>
                         <outlet property="synopsisLabel" destination="QvF-Ap-m8d" id="Yjm-MM-IVu"/>
                         <outlet property="titleLabel" destination="eSL-KT-utN" id="vaR-hm-b3E"/>
+                        <segue destination="Y8m-WZ-lZ9" kind="presentation" identifier="showTrailer" id="fZe-MU-4Ub"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gy1-d8-tfa" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="Ahb-G9-vLA">
+                    <connections>
+                        <action selector="didTapPoster:" destination="RYg-nJ-tic" id="j1d-rY-Tom"/>
+                    </connections>
+                </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="134.78260869565219" y="724.72826086956525"/>
+            <point key="canvasLocation" x="613" y="767"/>
+        </scene>
+        <!--Trailer View Controller-->
+        <scene sceneID="iCR-aT-sub">
+            <objects>
+                <viewController id="Y8m-WZ-lZ9" customClass="TrailerViewController" customModule="Flixster" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="xeT-Re-npX">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <wkWebView contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="efk-Ny-6oR">
+                                <rect key="frame" x="0.0" y="64" width="414" height="672"/>
+                                <color key="backgroundColor" red="0.36078431370000003" green="0.38823529410000002" blue="0.4039215686" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <wkWebViewConfiguration key="configuration">
+                                    <audiovisualMediaTypes key="mediaTypesRequiringUserActionForPlayback" none="YES"/>
+                                    <wkPreferences key="preferences"/>
+                                </wkWebViewConfiguration>
+                            </wkWebView>
+                            <navigationBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vW7-WH-GfT">
+                                <rect key="frame" x="0.0" y="20" width="414" height="44"/>
+                                <items>
+                                    <navigationItem title="Movie Trailer" id="3ka-84-7ma">
+                                        <barButtonItem key="leftBarButtonItem" title="Back" id="bT5-b1-jm6">
+                                            <connections>
+                                                <action selector="backClicked:" destination="Y8m-WZ-lZ9" id="ys3-Mk-VMh"/>
+                                            </connections>
+                                        </barButtonItem>
+                                    </navigationItem>
+                                </items>
+                            </navigationBar>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="efk-Ny-6oR" firstAttribute="top" secondItem="vW7-WH-GfT" secondAttribute="bottom" id="BDs-M8-7cA"/>
+                            <constraint firstItem="efk-Ny-6oR" firstAttribute="leading" secondItem="pdn-LG-kTV" secondAttribute="leading" id="OYA-Fg-eqM"/>
+                            <constraint firstAttribute="bottom" secondItem="efk-Ny-6oR" secondAttribute="bottom" id="as2-6c-pNw"/>
+                            <constraint firstItem="vW7-WH-GfT" firstAttribute="top" secondItem="pdn-LG-kTV" secondAttribute="top" id="ihm-tA-y9V"/>
+                            <constraint firstItem="vW7-WH-GfT" firstAttribute="leading" secondItem="pdn-LG-kTV" secondAttribute="leading" id="m2u-IY-czc"/>
+                            <constraint firstItem="efk-Ny-6oR" firstAttribute="trailing" secondItem="pdn-LG-kTV" secondAttribute="trailing" id="sk0-H0-oX2"/>
+                            <constraint firstItem="vW7-WH-GfT" firstAttribute="trailing" secondItem="pdn-LG-kTV" secondAttribute="trailing" id="vUq-jn-3Nq"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="pdn-LG-kTV"/>
+                    </view>
+                    <connections>
+                        <outlet property="webkitView" destination="efk-Ny-6oR" id="7oP-jF-g0n"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lwP-Qf-ube" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="611.59420289855075" y="1519.5652173913045"/>
         </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="cxp-cr-6qh">
@@ -250,6 +309,7 @@
                                         </view>
                                         <connections>
                                             <outlet property="posterImageView" destination="FJI-OC-kvb" id="zP9-eg-Wfc"/>
+                                            <segue destination="RYg-nJ-tic" kind="show" id="ISc-PQ-Gm1"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
@@ -297,4 +357,7 @@
         <image name="now_playing_tabbar_item" width="21" height="21"/>
         <image name="superhero_tabbar_item" width="21" height="23"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="ISc-PQ-Gm1"/>
+    </inferredMetricsTieBreakers>
 </document>
